LuxStudio/depl/base/deployment-luxapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luxapi-app
  template:
    metadata:
      labels:
        app: luxapi-app
    spec:
      containers:
        - name: luxapi-container
          image: luxoria/luxapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
