LuxStudio/depl/base/deployment-luxstudio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxstudio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luxstudio-app
  template:
    metadata:
      labels:
        app: luxstudio-app
    spec:
      containers:
        - name: luxstudio-container
          image: luxoria/luxstudio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
